@@ -2,6 +2,10 @@ Revision history for Class-Tiny
 
 {{$NEXT}}
 
+    [ADDED]
+
+    - added introspection method: get_all_attribute_defaults_for($class)
+
     [DOCUMENTED]
 
     - Fixed TOBYINK email address for contributors list
@@ -32,7 +36,7 @@ Revision history for Class-Tiny
 
     [ADDED]
 
-    - added introspection method: get_all_attributes_for( $class)
+    - added introspection method: get_all_attributes_for($class)
 
     [INTERNAL]
 
